Placeholding images and alignment fixed for projects page

--- a/src/components/landing/landing.scss
+++ b/src/components/landing/landing.scss
@@ -24,6 +24,9 @@ table {
   border: 2px solid #D1E8E2;
   padding: 10px;
 }
+th {
+  border: 1px dotted orange;
+}
 
 a {
   text-decoration: none;
